--- a/frontend/src/style/Components/_button.scss
+++ b/frontend/src/style/Components/_button.scss
@@ -1,7 +1,8 @@
 .button{
         text-transform: uppercase;
         text-decoration: none;
-        padding: 1.3rem 4rem;
+        // padding: 1.3rem 4rem;
+        padding: 1rem;
         display: inline-block;
         border-radius: .8rem;
         width: 100%;
@@ -26,7 +27,8 @@
         background-color: $success-color;
         color: $color-white;
         width: fit-content;
-        align-self: center;
+        align-self: start;
+        // padding: 1rem;
     }
 
     &--link{
