--- a/frontend/src/style/Layout/_content.scss
+++ b/frontend/src/style/Layout/_content.scss
@@ -1,7 +1,6 @@
 .page-content{
     padding-top: 150px;
     display: flex;
-
 }
 
 .container{
@@ -15,11 +14,10 @@
 
     &--grid{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        // grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: 40% 60%;
         grid-column-gap: 0px;
         grid-row-gap: 50px;
-        width: 80vw;
+        width: 100%;
         padding: 50px 0;
 
         .grid-item:last-child{
@@ -88,6 +86,8 @@
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
+    grid-auto-rows: min-content;
+    width: 70%;
 }
 
 .info-box{
@@ -95,8 +95,8 @@
     border-radius:10px ;
     display: flex;
     align-items: center;
+    height: 70px;
     padding: 20px;
-    // border: 3px solid $primary-color;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 
 
@@ -118,12 +118,10 @@
     &__content {
         display: flex;
         padding: 12px;
-        box-sizing: border-box;
-        border: 2px solid #e1e2e7;
         border-radius: 10px;
-        transition: box-shadow 0.4s;
         position: relative;
         width: 210px;
+        box-shadow:rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 
         i{
             font-size: 26px;
@@ -150,10 +148,10 @@
     }
     
 
-    .request-status__content:hover {
-        -webkit-box-shadow: 0px 3px 5px 0px #e8e8e8;
-        box-shadow: 0px 3px 5px 0px #e8e8e8;
-    }
+    // .request-status__content:hover {
+    //     // -webkit-box-shadow: 0px 3px 5px 0px #e8e8e8;
+    //     box-shadow: 0px 3px 5px 0px #e8e8e8;
+    // }
   
    .request-status input[type="radio"]:checked + .request-status__content:after {
         content: "";
@@ -168,10 +166,10 @@
         box-shadow: 0px 0px 0px 2px $primary-color;
     }
   
-    .request-status input[type="radio"]:checked + .request-status__content {
-        transition: ease-in 0.3s;
-        background-color:white;
-    }
+    // .request-status input[type="radio"]:checked + .request-status__content {
+    //     transition: ease-in 0.3s;
+    //     background-color:white;
+    // }
     .request-status input[id="approve"]:checked + .request-status__content {
         border: 3px solid $success-color;
         i{
@@ -189,5 +187,11 @@
     .request-status input[type="radio"]:checked + .request-status__content:after {
       top: 35%;
       transform: translate(-50%);
+    }
+
+    .delete-text{
+        color: $primary-color;
+        font-weight: 600;
+        
     }
 
